--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         android:id="@+id/activity_main_title"
-        android:text="@string/text_mainactivity"
+        android:text="@string/mainactivity"
         android:textSize="25sp"
         android:textColor="#000"
         android:layout_marginTop="80dp"
@@ -24,9 +24,8 @@
         android:id="@+id/button_next_activity"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/activity_main_title"
+        app:layout_constraintTop_toBottomOf="@id/activity_main_title"
         android:layout_marginTop="50dp"
-        android:text="@string/text_next"
-        />
+        android:text="@string/next" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
