--- a/app/src/main/res/layout/activity_secondary.xml
+++ b/app/src/main/res/layout/activity_secondary.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.main.SecondaryActivity"
+    tools:context="SecondaryActivity"
     android:id="@+id/secondary">
 
     <TextView
@@ -14,7 +14,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         android:id="@+id/activity_secondary_title"
-        android:text="@string/text_secondaryactivity"
+        android:text="@string/this_is_secondary_fragment"
         android:textSize="25sp"
         android:textColor="#000"
         android:layout_marginTop="80dp"
@@ -28,7 +28,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/activity_secondary_title"
         android:layout_marginTop="50dp"
-        android:text="@string/text_back"
+        android:text="@string/back"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
